@@ -1,5 +1,7 @@
 2012-01-26  Doug Evans  <dje@google.com>
 
+	* symtab.c: Whitespace cleanup, no code changes.
+
 	* symtab.c (lookup_symbol_in_language): Improve comment.
 	(lookup_symbol_aux): Fix comment.
 
